--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -610,5 +610,8 @@ private:
     return FilteredValue;
   }
  
-== Подключение платы к компьютеру
+== Прошивка платы
 Подключим отладчик к плате, и подключим плату к компьютеру. Результат представлен на рисунке 6.
+Результат работы представлен на рисунке.
+
+image::результат.jpg[]
