--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -611,7 +611,8 @@ private:
   }
  
 == Прошивка платы
-Подключим отладчик к плате, и подключим плату к компьютеру. Результат представлен на рисунке 6.
-Результат работы представлен на рисунке.
+Подключим отладчик к плате, и подключим плату к компьютеру.
+Результат работы представлен на рисунке 11.
 
 image::результат.jpg[]
+Рисунок 11 - Скриншот из Terminal
