--- a/CR/Classes/Analog.adoc
+++ b/CR/Classes/Analog.adoc
@@ -1,3 +1,26 @@
+:imagesdir: Images
+:toc:
+:toc-title: Оглавление
+
+[.text-center]
+МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО ОБРАЗОВАНИЯ РОССИЙСКОЙ ФЕДЕРАЦИИ +
+Федеральное государственное автономное образовательное учреждение высшего образования +
+«Южно-Уральский государственный университет» +
+(национальный исследовательский университет) +
+Высшая школа электроники и компьютерных наук +
+Кафедра «Информационно-измерительная техника»
+
+[.text-center]
+
+Полный листинг кода класса Analog
+
+[.text-right]
+Выполнили: +
+студенты группы КЭ-415 +
+Леонов . +
+Платонов Д.В.
+
+[source, c]
 #ifndef ADC_HPP
 #define ADC_HPP
 #include <array>
