--- a/CR/Classes/Analog.adoc
+++ b/CR/Classes/Analog.adoc
@@ -1,4 +1,3 @@
-:imagesdir: Images
 :toc:
 :toc-title: Оглавление
 
@@ -17,7 +16,7 @@
 [.text-right]
 Выполнили: +
 студенты группы КЭ-415 +
-Леонов . +
+Леонов В.А. +
 Платонов Д.В.
 
 [source, c]
