--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -612,7 +612,10 @@ private:
  
 == Прошивка платы
 Подключим отладчик к плате, и подключим плату к компьютеру.
-Результат работы представлен на рисунке 11.
+Результат работы представлен на рисунке 11. На рисунке 12 скриншот из программы Terminal.
+
+image::plata_rabota.gif[]
+Рисунок 11 - Работа платы
 
 image::результат.jpg[]
-Рисунок 11 - Скриншот из Terminal
+Рисунок 12 - Скриншот из Terminal
